fixed 'there is about a 1 pixel gap between the rollovers (see the industrial/office gap for the example). That should be flush.'

--- a/css/altres.css
+++ b/css/altres.css
@@ -340,6 +340,7 @@ body.not-front #primary-links a, body.not-front #primary-links a:link, body.not-
 	top: 0px;
 	padding: 0;
 	float: left;
+	margin-left: -1px;
 }
 
 
